--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -66,8 +66,8 @@
   \title{Objectification in Action: Self- and Other-Objectification in
 Same-gender Interactions}
     \author{Randi L. Garcia\textsuperscript{1, 2}, Kat
-Kyuchukova\textsuperscript{1}, Asha Hinson\textsuperscript{1}, \& Laneé
-Jung\textsuperscript{1}}
+Kyuchukova\textsuperscript{1, 2}, Asha Hinson\textsuperscript{1}, \&
+Laneé Jung\textsuperscript{2}}
     \date{}
   
 \shorttitle{Objectification in Action}
@@ -640,7 +640,7 @@ thus confidentiality would be broken.
 \subsection{Analysis Strategy}\label{analysis-strategy}
 
 \begin{figure}
-\includegraphics[width=400px]{APIM_figure} \caption{Basic actor-partner interdependence model (APIM) depiction.}\label{fig:apim}
+\includegraphics[width=400px]{figures/APIM_figure} \caption{Basic actor-partner interdependence model (APIM) depiction.}\label{fig:apim}
 \end{figure}
 
 This study sought to detect whether partners' objectification of one
@@ -695,7 +695,7 @@ possibilities.
 \subsection{Main Results}\label{main-results}
 
 \begin{figure}
-\includegraphics[width=400px]{SEMfigure} \caption{This figure depicts the relationships tested bewteen study variables. The light gray variables represent redundant variables and are shown to emphasize the dyadic nature of the data. The estimates were from obtained from separate MLMs. Sample was controlled for in all models. The effects of TSO, actor other-objectification, and partner other-objectification are from a model where the interaction of TSO and partner other-objectification had been trimmed. *p < .05, dashed lines represent non-significant relationships.}\label{fig:semfigure}
+\includegraphics[width=400px]{figures/SEMfigure} \caption{This figure depicts the relationships tested bewteen study variables. The light gray variables represent redundant variables and are shown to emphasize the dyadic nature of the data. The estimates were from obtained from separate MLMs. Sample was controlled for in all models. The effects of TSO, actor other-objectification, and partner other-objectification are from a model where the interaction of TSO and partner other-objectification had been trimmed. *p < .05, dashed lines represent non-significant relationships.}\label{fig:semfigure}
 \end{figure}
 
 All relationships between study variables and the MLM estimates are
