--- a/SEM analysis supplement/Final Manuscript.Rmd
+++ b/SEM analysis supplement/Final Manuscript.Rmd
@@ -1,6 +1,6 @@
 ---
-title             : "Objectification in Action: Self- and Other-Objectification in Same-gender Interactions"
-shorttitle        : "Objectification in Action"
+title             : "Objectification in Action: SEM Supplement"
+shorttitle        : "SEM Supplement"
 
 author: 
   - name          : "Kat Kyuchukova"
@@ -54,9 +54,9 @@ library(kutils)
 library(tidyverse)
 library(lavaan)
 library(xtable)
-clark_measures <- read.csv("Cleaned data/clark_measures.csv")
-smith <- read.csv("Cleaned data/smith.csv")
-clarksmith_women <- read.csv("Cleaned data/clarksmith_women.csv")
+clark_measures <- read.csv("../Cleaned-data/clark_final.csv")
+smith <- read.csv("../Cleaned-data/smith_final.csv")
+clarksmith_women <- read.csv("../Cleaned-data/clarksmith_women.csv")
 ```
 
 ```{r analysis-preferences}
@@ -184,7 +184,7 @@ correlations <- apa.cor.table(clarksmith_correlations, table.number=1)
 ```
 
 #Introduction
-Theorists across diverse disciplines have explored the multiple ways that the body conveys social meaning, as well as how these meanings shape gendered experiences and therefore inform individuals’ thinking, feeling, and behavior, especially during interpersonal interactions with members of different social groups [@Kaschak]. Empirical evidence illustrates how women, in particular,  continue to be objects of perpetual discrimination as a result of psychosocial markers, like gender, that produce modes through which their identity is understood [@swimetal]. Objectification theory, a valuable theoretical framework proposed by @robertsfredrickson which works to contextualize female bodies as socio-cultural constructions, can be employed to illuminate the gender oppression and negative lived experiences of girls and women. Additionally, one of the most detrimental forms of discrimination against them is thought to be the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification occurs with both “endless variety and monotonous similarity,” and is thus mediated by unique combinations of race, ethnicity, sexuality, age, and class [@fredricksonetal2011; @rubin1975, cited in @frasernicholson1989, p. 28]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969], and will more than likely internalize the objectifying gaze on physical self [@young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredricksonetal1998]. Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines, which can lead to a state of self-objectification [@calogero2011, @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO).
+Theorists across diverse disciplines have explored the multiple ways that the body conveys social meaning, as well as how these meanings shape gendered experiences and therefore inform individuals’ thinking, feeling, and behavior, especially during interpersonal interactions with members of different social groups [@Kaschak]. Empirical evidence illustrates how women, in particular,  continue to be objects of perpetual discrimination as a result of psychosocial markers, like gender, that produce modes through which their identity is understood [@swimetal]. Objectification theory, a valuable theoretical framework proposed by @robertsfredrickson which works to contextualize female bodies as socio-cultural constructions, can be employed to illuminate the gender oppression and negative lived experiences of girls and women. Additionally, one of the most detrimental forms of discrimination against them is thought to be the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification occurs with both “endless variety and monotonous similarity,” and is thus mediated by unique combinations of race, ethnicity, sexuality, age, and class [@fredricksonetal2011; @rubin1975, cited in @frasernicholson1989, p. 28]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969], and will more than likely internalize the objectifying gaze on physical self [@young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredrickson1998swimsuit]. Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines, which can lead to a state of self-objectification [@calogero2011, @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO).
 In the current work, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification,  but between same-sex female interpersonal interactions. We predicted that being objectified by one’s interaction partner would lead to self-objectification, in addition to modified feelings of authenticity in postinteraciton outcomes, including feelings of agency in romantic relationships, career aspiration, and cognitive performance [@quinnetal]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@swimetal]. Moreover, it was the goal of this research to empirically explore the role of interaction authenticity in objectification by utilizing a structural equation modeling to examine the effects for both women simultaneously. We expected to replicate the results found in the previous @garcia2016objectification study. More specifically, we expected to find a positive relationship between state-other objectification and self-state objectification, and a resulting negative relationship between self-state objectification and interaction authenticity. Finally, we expected there to be a positive relationship between interaction authenticity and cognitive performance, relationship agency, and career aspirations.
 
 
@@ -224,7 +224,7 @@ A scale was used from @garcia2016objectification to assess how much agency an in
 To conceptualize participants’ career aspirations after the interaction, we used the 10-item adaptation of @grayobrien2007’s Career Aspiration Scale employed in @garcia2016objectification, which asked participants to consider how true 10 statements were in regard to their future careers on a scale from 0 (not at all true of me) to 4 (very true of me). Items include "I hope to become a leader in my career field" and "I hope to move up through any organization or business I work in." Items were fairly reliable ($\alpha$ = `r printnum(clark_careerasp_alpha)[1,1]` for Sample 1, $\alpha$ = `r printnum(smith_careerasp_alpha)[1,1]` for Sample 2).
 
 ###Trait Self-Objectification
-Trait self-objectification (TSO) was assessed using the Self-Objectification Questionnaire [@fredricksonetal1998; @nollfredrickson1998], which evaluates the extent to which individuals view their bodies in observable versus nonobservable ways. The questionnaire asked participants to rank order both appearance and functional aspects of their bodies, from 1 (least important) to 10 (most important), with respect to physical self-concepts. Of the ten body attributes, five of the items were appearance-based (weight, sex appeal, physical attractiveness, firm/sculpted muscles and body measurements), and five of the items were competence-based (strength, physical coordination, energy level, health and physical fitness). Difference scores were computed by subtracting the sum of the 5 functional aspects/competence attributes (e.g., health, strength) from the sum of the 5 physical self-concepts/appearance attributes (e.g., physical attractiveness, weight), and all measures were multiplied by -1, as was done in @garcia2016objectification, so that positive scores indicated greater TSO. 
+Trait self-objectification (TSO) was assessed using the Self-Objectification Questionnaire [@fredrickson1998swimsuit; @nollfredrickson1998], which evaluates the extent to which individuals view their bodies in observable versus nonobservable ways. The questionnaire asked participants to rank order both appearance and functional aspects of their bodies, from 1 (least important) to 10 (most important), with respect to physical self-concepts. Of the ten body attributes, five of the items were appearance-based (weight, sex appeal, physical attractiveness, firm/sculpted muscles and body measurements), and five of the items were competence-based (strength, physical coordination, energy level, health and physical fitness). Difference scores were computed by subtracting the sum of the 5 functional aspects/competence attributes (e.g., health, strength) from the sum of the 5 physical self-concepts/appearance attributes (e.g., physical attractiveness, weight), and all measures were multiplied by -1, as was done in @garcia2016objectification, so that positive scores indicated greater TSO. 
 
 ###Description of the Samples
 Thirty-two previously unacquainted self-identifying female-sex dyads (64 total participants) from two liberal arts institutions in the Northeast of the United States participated in this study.  More specifically, twelve of the pairs, which derived from Sample 1, were students at a co-ed liberal arts college, while the remaining twenty pairs who came from Sample 2 attended a women’s liberal arts college. Initially, data was collected from same-sex and mixed-sex dyads that comprised of male and female gendered individuals. Sample 1 originally consisted of twenty-two pairs, twelve men and thirty-two women. Twenty-three pairs made up of forty-three women and one man, as well as two participants who did not identify with either gender category, formed Sample 2. Due to similarities across samples in regard to correlation patterns between significant variables within this study, the two datasets were combined. For consistency, we limited participant data to same sex female pairs at the two colleges. These participants were mostly first-year college students, with an average age of `r mean_age` (SD = `r sd_age`). The sample was `r percent_white`% White/European American, `r percentage_black`% Black/African-American, `r percent_asian`% Asian/Pacific Islander, `r percent_latinx`% Latinx, and `r percent_other`% mixed-race. There were `r samerace_white` White/White pairs and `r samerace_minority` same race racial minority pairs, for a total of `r samerace_white + samerace_minority` same-race pairs. The remaining `r mixedrace_white + mixedrace_minority` were mixed race pairs, of which `r mixedrace_white` were White/racial minority pairings and `r mixedrace_minority` were cross-racial minority group pairs. `r percent_straight`% of the sample identified as heterosexual, and `r percent_queer`% identified as gay, lesbian or bisexual. 
@@ -237,7 +237,7 @@ We used `r cite_r("r-references.bib")` for all our analyses.
 
 ## Analysis Strategy
 
-This study sought to replicate the results of @garcia2016objectification’s study, done with male-female pairs, which used dyadic analysis to detect whether partners’ objectification of one another affected state self-objectification (SSO). See Figure\ \@ref(fig:2016figure) for the path analysis results of the previous study. We hope to investigate how the main effects found in the previous study relay to interactions between women: specifically, the relationship between state-other objectification and self-state objectification and the resulting effect of self-state objectification on inauthenticity during the interaction.
+This study sought to replicate the results of @garcia2016objectification’s study, done with male-female pairs, which used dyadic analysis to detect whether partners’ objectification of one another affected state self-objectification (SSO). We hope to investigate how the main effects found in the previous study relay to interactions between women: specifically, the relationship between state-other objectification and self-state objectification and the resulting effect of self-state objectification on inauthenticity during the interaction.
 
 We used path analysis to obtain our estimates, but because our sample is nonindependent, we used the indistinguishable actor–partner interdependence model [@olsen2006structural]. The APIM can be defined as a "model of dyadic relationships that integrates a conceptual view of interdependence with the appropriate statistical techniques for measuring and testing it" [@olsen2006structural]. See Figure\ \@ref(fig:apim) for a basic APIM model. Unlike the original @garcia2016objectification study, our study deals with indistinguishable dyads, meaning the designation of who is designated as "actor" and who is designated as "partner" is arbitrary. Due to constraints of the basic APIM, in that this was an exploration of indistinguishable female dyads, we had to fix all path estimates to be the same across/between people and partners, in addition to all variances, covariances, endogenous intercepts, and exogenous means. Due to the complexity of the original @garcia2016objectification study, we also had to set the exogenous covariances equal. More specifically, the covariances between TSO, actor and partner objectification, and the interaction between actor TSO and partner objectification (and vice versa).
 
@@ -639,15 +639,15 @@ apa_table(fit_table, caption = "Estimates from final Path Analysis Model", font_
 
 
 ```{r apim, include=TRUE, echo=FALSE, results='asis', out.width="400px", fig.cap="Basic actor-partner interdependence model (APIM) depiction."}
-include_graphics("APIM_figure.png")
+include_graphics("../figures/APIM_figure.png")
 ```
 
 ```{r 2016figure, include=TRUE, echo=FALSE, results='asis', out.width="400px", fig.cap="Path Analysis Model from Garcia et al. (2016) study with distinguishable dyads."}
-include_graphics("2016_figure.jpg")
+#include_graphics("../figures/2016_figure.jpg")
 ```
 
 ```{r semfigure, include=TRUE, echo=FALSE, results='asis', out.width="400px", fig.cap="Path Analysis Model with Estimates"}
-include_graphics("SEMfigure.png")
+include_graphics("../figures/SEMfigure.png")
 ```
 
 
