edits, almost there

--- a/references.bib
+++ b/references.bib
@@ -330,13 +330,24 @@ doi = {10.1177/0956797609357751}
 
 @article{robertsfredrickson,
   title={Objectification theory: Toward understanding women's lived experiences and mental health risks},
-  author={Fredrickson, Barbara L and Roberts, Tomi-Ann},
+  author={Fredrickson and Roberts},
   journal={Psychology of women quarterly},
   volume={21},
   number={2},
   pages={173--206},
   year={1997},
   publisher={Wiley Online Library}
+}
+
+@article{davies2005clearing,
+  title={Clearing the air: identity safety moderates the effects of stereotype threat on women's leadership aspirations.},
+  author={Davies, Paul G and Spencer, Steven J and Steele, Claude M},
+  journal={Journal of personality and social psychology},
+  volume={88},
+  number={2},
+  pages={276},
+  year={2005},
+  publisher={American Psychological Association}
 }
 
 @article{swimetal, title={Everyday Sexism: Evidence for Its Incidence, Nature, and Psychological Impact From Three Daily Diary Studies}, volume={57}, DOI={10.1111/0022-4537.00200}, number={1}, journal={Journal of Social Issues}, author={Swim, Janet K. and Hyers, Lauri L. and Cohen, Laurie L. and Ferguson, Melissa J.}, year={2001}, pages={31–53}}
