cleaned up a bunch

--- a/references.bib
+++ b/references.bib
@@ -66,15 +66,21 @@
 @article{rollero2016bringing,
   title={Bringing Objectification into Social Relationships Research: Is Self-Objectification Harmful for Authenticity?},
   author={Rollero, Chiara},
-  year={2016}
+  journal={The Spanish Journal of Psychology},
+  number={19},
+  pages={1-7},
+  year={2016},
+  publisher={Facultad de Psicolog{\'\i}a}
 }
 
-
-@article{nadal2012effects,
-  title={The effects of sexism, gender microaggressions, and other forms of discrimination on women's mental health and development.},
-  author={Nadal, Kevin L and Haynes, Kristal},
+@incollection{nadal2012effects,
+  chapter={The effects of sexism, gender microaggressions, and other forms of discrimination on women's mental health and development.},
   year={2012},
-  publisher={Praeger/ABC-CLIO}
+  pages = {87–101},
+  title = {Women's psychology. Women and mental disorders},
+  publisher = {Praeger/ABC-CLIO},
+  editor = {Lundberg-Love, P. K., Nadal, K. L. and Paludi, M. A.},
+  author = {Nadal, Kevin L and Haynes, Kristal},
 }
 
 @article{festinger1954theory,
@@ -197,7 +203,7 @@
 }
 
 @article{nollfredrickson1998,
-author = {M. Noll, Stephanie and L. Fredrickson, Barbara},
+author = {Noll, Stephanie and Fredrickson, Barbara},
 year = {1998},
 month = {07},
 pages = {623 - 636},
@@ -208,7 +214,7 @@ doi = {10.1111/j.1471-6402.1998.tb00181.x}
 }
 
 @article{grayobrien2007,
-author = {P. Gray, Michael and M. OBrien, Karen},
+author = {Gray, Michael P. and OBrien, Karen M.},
 year = {2007},
 month = {08},
 pages = {317-337},
@@ -316,9 +322,9 @@ doi = {10.1177/0956797609357751}
   publisher={Taylor \& Francis}
 }
 
-@article{lum1994lesbians,
+@article{rothblum1994lesbians,
   title={Lesbians and Physical Appearance Which Model Applies?},
-  author={LUM, ESTHERDR},
+  author={Rothblum, Esther},
   journal={Lesbian and gay psychology: Theory, research, and clinical applications},
   volume={1},
   pages={84},
@@ -351,17 +357,19 @@ doi = {10.1177/0956797609357751}
 }
 
 @article{swimetal, title={Everyday Sexism: Evidence for Its Incidence, Nature, and Psychological Impact From Three Daily Diary Studies}, volume={57}, DOI={10.1111/0022-4537.00200}, number={1}, journal={Journal of Social Issues}, author={Swim, Janet K. and Hyers, Lauri L. and Cohen, Laurie L. and Ferguson, Melissa J.}, year={2001}, pages={31–53}}
-@article{Bartky, title = {Femininity and Domination Studies in the Phenomenology of Oppression},year = {1990},author = {Sandra Lee Bartky}}
 
-@article{loughnan2015,
-  title={Exploring the role of culture in sexual objectification: A seven nations study},
-  author={Loughnan, Steve and Fernandez-Campos, Silvia and Vaes, Jeroen and Anjum, Gulnaz and Aziz, Mudassar and Harada, Chika and Holland, Elise and Singh, Indramani and Puvia, Elisa and Tsuchiya, Koji},
-  journal={Revue internationale de psychologie sociale},
-  volume={28},
-  number={1},
-  pages={125--152},
-  year={2015},
-  publisher={Presses universitaires de Grenoble}
+@book{Bartky, 
+  title = {Femininity and Domination: Studies in the Phenomenology of Oppression},
+  year = {1990},
+  author={Bartky, Sandra},
+  publisher={Routledge, New York}
+}
+
+@book{henley1977body,
+  title={Body politics: Power, sex, and nonverbal communication},
+  author={Henley, Nancy},
+  year={1977},
+  publisher={Prentice Hall}
 }
   
 @article{loughnan2017internalizing,
@@ -459,7 +467,17 @@ doi = {10.1177/0956797609357751}
   publisher={Elsevier}
 }
 
-@article{fredricksonetal2011, title={Bringing Back the Body}, volume={35}, DOI={10.1177/0361684311426690}, number={4}, journal={Psychology of Women Quarterly}, author={Fredrickson, Barbara L. and Hendler, Lee Meyerhoff and Nilsen, Stephanie and O’Barr, Jean Fox and Roberts, Tomi-Ann}, year={2011}, pages={689–696}}
+@article{fredricksonetal2011, 
+  title={Bringing Back the Body}, 
+  volume={35}, 
+  DOI={10.1177/0361684311426690}, 
+  number={4}, 
+  journal={Psychology of Women Quarterly}, 
+  author={Fredrickson, Barbara L. and Hendler, Lee Meyerhoff and Nilsen, Stephanie and O’Barr, Jean Fox and Roberts, Tomi-Ann}, 
+  year={2011}, 
+  pages={689–696}
+}
+
  @article{briton1995,
   title={Beliefs about female and male nonverbal communication},
   author={Briton, Nancy J and Hall, Judith A},
@@ -687,13 +705,6 @@ doi = {10.1177/0956797609357751}
   publisher={Guilford Press}
 }
 
-@phdthesis{brownlow1998relationship,
-  title={The relationship between objectification, body image disturbances, and disordered eating: Investigating race, socioeconomic status, acculturation and self-objectification as mediators.},
-  author={Brownlow, Brenda Sue},
-  year={1998},
-  school={ProQuest Information \& Learning}
-}
-
 @article{lum1994lesbians,
   title={Lesbians and Physical Appearance Which Model Applies?},
   author={LUM, ESTHERDR},
@@ -715,11 +726,11 @@ doi = {10.1177/0956797609357751}
   publisher={American Psychological Association}
 }
 
-@book{noffsinger2004objectification,
+@phdthesis{noffsinger2004objectification,
   title={Objectification theory and disordered eating: The impact of feminist identification, internalization of sociocultural standards of appearance, and sexual orientation},
   author={Noffsinger-Frazier, Nicole Aimee},
   year={2004},
-  publisher={The University of Memphis}
+  school={The University of Memphis}
 }
 
 @article{gervais2013my,
@@ -731,6 +742,17 @@ doi = {10.1177/0956797609357751}
   pages={557--570},
   year={2013},
   publisher={Springer}
+}
+
+@article{cikara2011agents,
+  title={From agents to objects: Sexist attitudes and neural responses to sexualized targets},
+  author={Cikara, Mina and Eberhardt, Jennifer L and Fiske, Susan T},
+  journal={Journal of Cognitive Neuroscience},
+  volume={23},
+  number={3},
+  pages={540--551},
+  year={2011},
+  publisher={MIT Press}
 }
 
 @article{yilmaz2019whose,
@@ -752,5 +774,3 @@ doi = {10.1177/0956797609357751}
 }
 
 @article{brunelletal2010, title={Dispositional authenticity and romantic relationship functioning}, volume={48}, DOI={10.1016/j.paid.2010.02.018}, number={8}, journal={Personality and Individual Differences}, author={Brunell, Amy B. and Kernis, Michael H. and Goldman, Brian M. and Heppner, Whitney and Davis, Patricia and Cascio, Edward V. and Webster, Gregory D.}, year={2010}, pages={900–905}}
-
-@book{young1979, title={Proceedings of The Second Sex—Thirty Years Later: A Commemorative Conference on Feminist Theory,}, author={Young, Iris Marion}, year={1979}}
