final read through

--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,17 @@
   publisher={American Psychological Association}
 }
 
+@article{pearson2008fragility,
+  title={The fragility of intergroup relations: Divergent effects of delayed audiovisual feedback in intergroup and intragroup interaction},
+  author={Pearson, Adam R and West, Tessa V and Dovidio, John F and Powers, Stacie Renfro and Buck, Ross and Henning, Robert},
+  journal={Psychological Science},
+  volume={19},
+  number={12},
+  pages={1272--1279},
+  year={2008},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
 @article{teran2020relational,
   title={The Relational Burden of Objectification: Exploring How Past Experiences of Interpersonal Sexual Objectification Are Related to Relationship Competencies},
   author={Ter{\'a}n, Larissa and Jiao, Jian and Aubrey, Jennifer Stevens},
