--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -22,7 +22,7 @@ affiliation:
     institution   : "Program in Statistical and Data Sciences, Smith College"
 
 abstract: |
-  Extant research on interpersonal objectification has focused mostly on links between objectification, self-objectification, and negative outcomes for women within mixed-gender interactions [@gervais2020social; @garcia2016objectification]. The purpose of the present study was to extend past research on interpersonal objectification to interactions between pairs of women. Women were brought into the laboratory and interacted face-to-face in same-sex dyads. Dyadic analysis [@kenny2006dyadic] was utilized to detect whether partners’ objectification of each other affected state self-objectification, as well as the resulting feelings of comfort and authenticity during the interaction. Results revealed a significant positive relationship between being objectified by a woman interaction partner and women’s own self-objectification (a partner effect). There was no significant relationship between self-objectification and interaction inauthenticity. Further, there were significant negative effects of inauthenticity on career aspirations and relationship agency (actor effects). The significant partner effect of objectification on self-objectification suggests that women being objectified by other women may result in feelings of self-objectification, and this finding opens up questions for future research about how interpersonal objectification might function in situations without an immediate male gaze.
+  Existing research on interpersonal objectification has focused mostly on links between objectification, self-objectification, and negative outcomes for women within mixed-gender interactions [@gervais2020social; @garcia2016objectification]. The purpose of the present study was to extend past research on interpersonal objectification to interactions between women. Women were brought into the laboratory and interacted face-to-face in same-sex dyads. Dyadic analysis [@kenny2006dyadic] was utilized to detect whether partners’ objectification of each other affected state self-objectification, as well as the resulting feelings of comfort and authenticity during the interaction. Results revealed a significant positive relationship between being objectified by a woman interaction partner and women’s own self-objectification (a partner effect). There was no significant relationship between self-objectification and interaction inauthenticity, but there were significant negative effects of inauthenticity on career aspirations and relationship agency (actor effects). The significant partner effect of objectification on self-objectification suggests that women being objectified by other women may result in feelings of self-objectification, and this finding opens up questions for future research about how interpersonal objectification might function in situations without an immediate male gaze.
   
 keywords          : "Interpersonal sexual objectification, self-objectifiation, authenticity, actual interactions, psychology of women, dyadic data analysis"
 
@@ -64,24 +64,24 @@ library(lavaan)
 library(xtable)
 library(rmarkdown)
 ```
-@robertsfredrickson's Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification for women have been theorized to be the strongest under the "male gaze," that is, when it is a percieved or actual man doing the objectifying [@calogero2004test; @gervais2011you; @gay2010my], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women have in recent years explored the interpersonal process of the objectification, finding evidence for *self*-objectification in the target as a proximal consequence of being objectified [@garcia2016objectification; @strelan2018birds; @riemer2020self]. In a recent review, @gervais2020social organized the extant literature on interpersonal self-objectification and proposed a theoretical model called the Social Interaction Model of Objectification (SIMO). The SIMO is useful for studying mixed-gender interactions, but can it be extended to interactions among women? Although there is evidence that women can objectify other women [@loughnan2015exploring; @puvia2013being; @gervais2013my], studies investigating the process of interpersonal objectification in interactions between women is scarce. 
+@robertsfredrickson's Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification for women have been theorized to be the strongest under the "male gaze," that is, when it is a percieved or actual man doing the objectifying [@calogero2004test; @gervais2011you; @gay2010my], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women have in recent years explored the interpersonal process of the objectification, finding evidence for *self*-objectification in the target as a proximal consequence of being objectified [@garcia2016objectification; @strelan2018birds; @riemer2020self]. In a recent review, @gervais2020social organized the extant literature on interpersonal self-objectification and proposed a theoretical model called the Social Interaction Model of Objectification (SIMO). The SIMO focuses on understanding mixed-gender interactions, ackowledging the patriarchal power structure embedded in these mixed interactions, but can it be extended to interactions among women? Although there is evidence that women can objectify other women [@loughnan2015exploring; @puvia2013being; @gervais2013my], studies investigating the process of interpersonal objectification in interactions between women is scarce. 
 
 The current study uses a face-to-face interaction methodology to being to answer a series of research questions about interpersonal objectification among women: Is objectification by a female interaction partner related to an increase in self-objectification for the woman being objectified? Does objectification by a woman have the same downstream negative consequences for women as being objectified by a male interaction partner? The current study addresses these questions by investigating interpersonal objectification among interacting pairs where both partners identify as women. We first review the literature on self-objectification, then we review the evidence for women objectifying other women before turning to the literature on interpersonal objectification. 
 
 ##Self-Objectification
 Self-objectification is a psychological process that translates the experiences of interpersonal objectification [@loughnan2017internalizing; @gervais2020social] into negative mental health outcomes [e.g., interaction inauthenticity, anxiety, lower self-esteem, and poor cognitive performance; @calogero2011; @moradi2008]. @calogero2011 proposes that self-objectification can be conceptualized as a learned trait, or *trait* self-objectification (TSO), whereby one abopts a habitual third-person perspective on one's own appearance. Furthermore, self-objectification can also be elicited momentarily, for example, when viewing sexualized images in movies and magazines [@morry2001magazine], when trying on sexualizing clothing [@fredrickson1998swimsuit], or during video chat when you believe your interaction partner can only see your body [not face; @saguyetal2010]. This momentary self-objectification is referred to as *state* self-objectification [SSO; @calogero2011; @moradi2008] and is characterized by feeling like a body rather than a full self within a particular moment, instance, or context. 
 
-There is evidence that being objectified by another person during an interaction elicits SSO. For example, @loughnan2017internalizing found that for women, imagining a time when they were objectified by another person caused reductions in human traits attributed to the self, and notably, the gender of the person doing the objectification was not a moderating factor. In addition, in a mixed-gender dyadic study of actual interactions, @garcia2016objectification found that men’s reported objectification of their female interaction partner was associated with increased self-objectification (as reported by their female partner). Further, this negative effect of the men's objectification on women's SSO was strongest for women higher in TSO. The current study uses this same dyadic paradigm to study same-gender, woman-woman interacting pairs. 
+Perhaps the most adverse negative consequence of interpersonal objectificaiton is that being objectified socializes girls and women to routinely treat themselves as objects to be looked at and evaluated [@Bartky]. There is experimental and observational evidence that being objectified by another person during an interaction elicits SSO. For example, @loughnan2017internalizing found that for women, imagining a time when they were objectified by another person caused reductions in human traits attributed to the self, and notably, the gender of the person doing the objectification was not a moderating factor. In addition, in a mixed-gender dyadic study of actual interactions, @garcia2016objectification found that men’s reported objectification of their female interaction partner was associated with increased self-objectification in the female partner. Further, this negative effect of the men's objectification on women's SSO was strongest for women higher in TSO. The current study uses this same dyadic paradigm to study same-gender, woman-woman interacting pairs. 
 
 ##Women Objectifying Women
-Past research investigating women objectifying other women has focused on the psychological conditions that led women to objectify women. @harsey2020men found that (trait) self-objectification was related to the objectification of women to a similar degree for male and female participants. Along the same lines, @strelan2005women found that the more women self-objectify, the more they objectify other women. Could the process work in the other direction as well, that is, could objectification by a woman produce (state) self-objectification, in a similar manner to objectification by a man? @hill2008examining assessed women’s experiences of objectification from men independently from women’s experiences of objectification from other women. They found that women may be socialized not only to see themselves as objects, but perhaps to see other women as objects as well. This process, however, was not comfirmed to occur during an actual interpersonal interaction. Thus, there is evidence that women do objectify other women, indeed, @loughnan2017internalizing found that women objectify other women to a greater extent than they objectify men. Women have also been found to objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but very little is known about interpersonal sexual objectification among women and what the effects of this objectification might be. Past studies have foud that objectification has more adverse consequences for women than men [@gervais2011you; @moradi2008; @saguyetal2010], however, we do not know much about the effect of the gender of the *objectifyer* on potential detrimental outcomes.
+Past research investigating women objectifying other women has focused on the psychological conditions that lead women to objectify other women. @harsey2020men found that (trait) self-objectification was related to the objectification of women to a similar degree for male and female participants. Along the same lines, @strelan2005women found that the more women self-objectify, the more they objectify other women. Could the process work in the other direction as well, that is, could objectification by a woman produce (state) self-objectification, in a similar manner to objectification by a man? @hill2008examining assessed women’s experiences of objectification from men independently from women’s experiences of objectification from other women. They found that women may be socialized not only to see themselves as objects, but perhaps to see other women as objects as well. This process, however, was not comfirmed to occur during an actual interpersonal interaction. Thus, there is evidence that women do objectify other women, indeed, @loughnan2017internalizing found that women objectify other women to a greater extent than they objectify men. Women have also been found to objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but very little is known about interpersonal sexual objectification among women and what the effects of this objectification might be. Past studies have foud that objectification has more adverse consequences for women than men [@gervais2011you; @moradi2008; @saguyetal2010], however, we do not know much about the effect of the gender of the *objectifyer* on these potential detrimental outcomes.
 
 ##Interpersonal Objectification
-Studies have shown that within social encounters women are gazed at more than men [@henley1977body], often times feel ‘looked at’ within interpersonal interactions [@argyle1969], and are likely to internalize the objectifying gaze on their physical self [@puvia2013being]. As mentiond above, interpersonal objectification has been found to have negative consequences for women. @gervais2011you found that an objectifying gaze by a male interaction partner (confederate) was associated with lower math performance for women than being objectified by a female interaction partner. Perhaps the most adverse negative consequence of interpersonal objectificaiton is that being objectified socializes girls and women to routinely treat themselves as objects to be looked at and evaluated [@Bartky; @fredrickson1998swimsuit]. @gervais2020social recently reviewed the research on interpersonal objectification and organized our current theoretical understanding of this process in the Social Interaction Model of Objectification (SIMO). What is clear from @gervais2020social's review is that we know little about women-on-women interpersonal objectification. Could there also be negative consequences for women after being objectified by a woman? 
+Studies have shown that within social encounters women are gazed at more than men [@henley1977body], often times feel ‘looked at’ within interpersonal interactions [@argyle1969], and are likely to internalize the objectifying gaze on their physical self [@puvia2013being]. As mentiond above, interpersonal objectification has been found to have negative consequences for women. @gervais2011you found that an objectifying gaze by a male interaction partner (confederate) was associated with lower math performance for women than being objectified by a female interaction partner.  @gervais2020social recently reviewed the research on interpersonal objectification and organized our current theoretical understanding of this process in the SIMO. What is clear from @gervais2020social's review is that we know little about women-on-women interpersonal objectification. Could there also be negative consequences for women after being objectified by a woman? 
 
 Past research has found that the experience of state self-objectification in mixed-gender contexts (stranger and romantic; @strelan2018birds; @meltzer2020women; @zurbriggen2011self) has negative consequences for women, but what about in the context of interactions with other women? Is the self-objectification experienced in mixed-gender interactions associated with the same negative process as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect for women would suggest no [@saguyetal2010; @calogero2004test; @gervais2011you; @gay2010my], but, there is evidence that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men] and recent experimental evidence suggests that the female gaze causes no less self-objectification than the male gaze [@yilmaz2019whose]. It would be helpful to understand the consequencs of this *intra*group objectification for women. When women objectify other women, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
 
-There is some evidence that reduced authenticity is a consequence of self-objectification [@garcia2016objectification; @teran2020relational]. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [@teran2020relational]. This link has also been found in research on stigmatized-stigmatizer interactions [@hebl2005promoting; @richeson2003prejudice; @shelton2005expecting], and we might view the experience of being objectified in an interaction as a potential identity threat, stigmatizing, situation [@nadal2012effects; @gervais2020social]. Further, empirical evidence reveals that healthy relationship functioning manifests through authenticity in romantic relationships [@brunelletal2010], an intergroup context at least in heterosexual relationships. Evidence for otehr adverse consquences of interpersonal objectification include reductions in career aspirations [@garcia2016objectification] and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. These are also negative conseqences found for women under steroetype threat [@davies2005clearing]. When a woman is objectified by a man, and subsequently experiences self-objectification, the intergroup nature and power differential of this encounter might trigger threat. Thus, perhaps there are fewer negative consequences when a woman is objectified by another woman. That is, the intergroup threat literature might predict that woman-woman interpersonal objectification processes diverge from mixed-gender interpersonal objectification processes precisely because they are not intergroup interactions (at least with respect to gender identity). 
+There is some evidence that reduced authenticity is a consequence of self-objectification [@garcia2016objectification; @teran2020relational]. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [@teran2020relational]. Authenticity reduction and interaction quality disrutptions hve also been found in research on stigmatized-stigmatizer interactions [@hebl2005promoting; @richeson2003prejudice; @shelton2005expecting; @pearson2008fragility], and we might view the experience of being objectified in an interaction as a potential identity threat situation [@nadal2012effects; @gervais2020social]. Further, empirical evidence reveals that healthy relationship functioning manifests through authenticity in romantic relationships [@brunelletal2010], an intergroup context at least in heterosexual relationships. Evidence for other adverse consquences of interpersonal objectification include reductions in career aspirations [@garcia2016objectification] and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. These are also negative conseqences found for women under steroetype threat [@davies2005clearing]. When a woman is objectified by a man, and subsequently experiences self-objectification, the intergroup nature and power differential of this encounter might trigger threat. Thus, perhaps there are fewer negative consequences when a woman is objectified by another woman. That is, the intergroup threat literature might predict that woman-woman interpersonal objectification processes diverge from mixed-gender interpersonal objectification processes precisely because they are not intergroup interactions (at least with respect to gender identity). 
 
 In summary, a woman objectified by another woman may not be having the same negative consequences that cascade from situations that trigger group-based identity threat [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting]; however, feeling like a body rather than a full human (higher SSO) in any interaction, whether intergroup or intragroup, may be enough to reduce women's feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; @teran2020relational].
 
